--- a/front-end/styles/Home.module.css
+++ b/front-end/styles/Home.module.css
@@ -5,7 +5,6 @@
 
 .homePage {
   display: flex;
-  flex-direction: row;
   height: 100vh;
 }
 
@@ -23,20 +22,28 @@
 }
 
 .title {
-  font-size: 2rem;
-  font-weight: bold;
-  font-family: Georgia, "Times New Roman", Times, serif;
-  text-align: center;
   text-decoration: underline;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  padding: 1rem 0;
-  color: rgb(0, 0, 0);
+  font-size: 2.5rem;
+  text-align: center;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 
-.titleP {
-  font-size: 2rem;
-  align-items: center;
+.flexHeader {
+  display: flex;
+  height: 100vh;
+}
+
+.mainHome {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  color: rgb(0, 0, 0);
+  border: 1px solid black;
+}
+
+.mainContent {
+  margin: 0 2rem 2rem 2rem;
+  border: 1px solid black;
+  height: 100%;
 }
