--- a/front-end/styles/Home.module.css
+++ b/front-end/styles/Home.module.css
@@ -1,6 +1,6 @@
 .header {
   padding: 0.75rem;
-  background-image: linear-gradient(to bottom, #7d0808, #7d0808);
+  background-image: linear-gradient(to bottom, #7d1818, #7d1818);
 }
 
 .homePage {
@@ -17,8 +17,8 @@
 }
 
 .navItem {
-  height: 3rem;
-  width: 3rem;
+  height: 2.2rem;
+  width: 2.2rem;
 }
 
 .title {
@@ -38,12 +38,34 @@
   display: flex;
   flex-direction: column;
   width: 100%;
+  height: 100%;
   color: rgb(0, 0, 0);
   border: 1px solid black;
 }
 
 .mainContent {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
   margin: 0 2rem 2rem 2rem;
   border: 1px solid black;
   height: 100%;
+  min-height: 0;
+}
+
+.mainWorkouts {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  color: rgb(0, 0, 0);
+}
+
+.workoutContent {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  margin: 0 2rem 2rem 2rem;
+  height: 100%;
+  min-height: 0;
 }
