--- a/front-end/styles/Home.module.css
+++ b/front-end/styles/Home.module.css
@@ -25,8 +25,7 @@
   text-decoration: underline;
   font-size: 2.5rem;
   text-align: center;
-  padding-top: 1rem;
-  padding-bottom: 1rem;
+  margin-bottom: 0;
 }
 
 .flexHeader {
@@ -40,7 +39,6 @@
   width: 100%;
   height: 100%;
   color: rgb(0, 0, 0);
-  border: 1px solid black;
 }
 
 .mainContent {
