--- a/front-end/styles/Home.module.css
+++ b/front-end/styles/Home.module.css
@@ -99,3 +99,37 @@
   font-size: 1rem;
   align-self: center;
 }
+
+.modalBackdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.6);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.modal {
+  background-color: white;
+  padding: 2rem;
+  border-radius: 12px;
+  width: 300px;
+  max-width: 90%;
+  text-align: center;
+}
+
+.modalButtons button {
+  margin: 0.5rem;
+}
+
+.navButton {
+  background: none;
+  border: none;
+  padding: 0;
+  margin: 0;
+  cursor: pointer;
+}
