--- a/front-end/styles/Workout.module.css
+++ b/front-end/styles/Workout.module.css
@@ -14,7 +14,7 @@
   overflow-x: auto;
 }
 
-.agendaContainer>div {
+.agendaContainer > div {
   flex: 1;
   display: flex;
   flex-direction: column;
@@ -32,7 +32,7 @@
 
 .dayTitles {
   padding: 0.75rem 0;
-  border-bottom: 1px solid #e0e0e0;
+  border-bottom: 1px solid #bcbcbc;
   font-weight: 600;
   font-size: 1.1rem;
   color: #333;
@@ -41,6 +41,7 @@
   text-align: center;
   background: #f5f7fa;
   border-radius: 10px 10px 0 0;
+  margin-top: 0;
 }
 
 .workoutContainer {
@@ -99,6 +100,7 @@
   align-items: center;
   display: flex;
   gap: 1rem;
+  border: 1px solid #e0e0e0;
 }
 
 .workoutPageTitle {
@@ -116,7 +118,7 @@
   width: 1.2rem;
   height: 1.2rem;
   border-radius: 4px;
-  border: #1976d2 1px solid;
+  border: #a0a0a0 1px solid;
   margin-right: 0.5rem;
 }
 
