--- a/front-end/styles/HomePage.module.css
+++ b/front-end/styles/HomePage.module.css
@@ -1,12 +1,10 @@
 /* ───── Kaart ─────────────────────────── */
 .card {
   position: relative;
-  border-radius: 20px;
-  padding: 4.5rem 1.6rem 1.6rem;
-  /* extra top-space voor header */
-  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.12);
-  border: 1px solid rgba(0, 0, 0, 0.08);
-  min-width: 260px;
+  border-radius: 10px;
+  padding: 4rem 1.6rem 1rem 1.6rem;
+
+  min-width: 200px;
   flex: 0 0 auto;
 }
 
@@ -17,10 +15,9 @@
   left: 0;
   width: 100%;
   padding: 0.4rem 0;
-  border-radius: 20px 20px 0 0;
-  background: rgba(176, 176, 176, 0.75);
-  backdrop-filter: blur(4px);
-  border-bottom: 2px solid rgba(0, 0, 0, 0.6);
+  border-radius: 10px 10px 0 0;
+
+  border-bottom: 2px solid rgba(0, 0, 0, 0.2);
   font-size: 1.1rem;
   font-weight: 700;
   text-align: center;
@@ -44,12 +41,12 @@
   flex: 1;
   display: flex;
   flex-direction: column;
-  gap: 0.5rem;
+  gap: 0.9rem;
 }
 
 .title {
   margin: 0;
-  font-size: 1.45rem;
+  font-size: 1.1rem;
   font-weight: 700;
   line-height: 1.25;
 }
@@ -129,13 +126,14 @@
   align-items: flex-start;
   width: 90%;
   max-height: 30rem;
+  margin-bottom: 1rem;
 }
 
 .sectionTitle {
   font-size: 1.75rem;
   font-weight: 600;
   letter-spacing: 0.5px;
-  margin-bottom: 0.5rem;
+  margin-bottom: 1rem;
   color: #111;
   font-family: "Segoe UI", sans-serif;
 }
@@ -144,8 +142,8 @@
   font-size: 1.75rem;
   font-weight: 600;
   letter-spacing: 0.5px;
-  margin-bottom: 0.5rem;
-  margin-top: 0;
+  margin-bottom: 1rem;
+  margin-top: 1rem;
   padding-top: 0;
   color: #111;
   font-family: "Segoe UI", sans-serif;
@@ -161,7 +159,7 @@
 .rowScroll {
   display: flex;
   flex-wrap: nowrap;
-  gap: 0.5rem;
+  gap: 1rem;
   white-space: nowrap;
   padding-bottom: 0.5rem;
   overflow-x: auto;
